# prezel

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  src.db
.cargo/: config.toml
.github/workflows/: checks.yml  db.yml  docker.yml
docs/: globals.css  next.config.js  package.json  pnpm-lock.yaml  theme.config.tsx  tsconfig.json
docs/components/: Api.tsx  Comment.tsx  Footer.tsx
docs/pages/: _meta.js  apps.mdx  builds.mdx  databases.mdx  deployments.mdx  index.mdx  quick-start.mdx  reference.mdx
docs/public/: openapi.json
examples/astro-drizzle/: drizzle.config.ts  package.json  pnpm-lock.yaml
examples/astro-drizzle/drizzle/: 0000_legal_hedge_knight.sql
examples/astro-drizzle/drizzle/meta/: 0000_snapshot.json  _journal.json
examples/astro-drizzle/src/db/: index.ts  schema.ts
examples/astro-drizzle/src/pages/: index.astro
examples/astrodb/: astro.config.mjs  package.json  pnpm-lock.yaml
examples/astrodb/db/: config.ts
examples/astrodb/src/layouts/: Layout.astro
examples/astrodb/src/pages/: index.astro
examples/next-drizzle/: .gitignore  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/next-drizzle/drizzle/: 0000_cute_iron_patriot.sql
examples/next-drizzle/drizzle/meta/: 0000_snapshot.json  _journal.json
examples/next-drizzle/src/app/: layout.tsx  page.tsx
examples/next-drizzle/src/db/: index.ts  schema.ts
examples/t3-app/: package.json  pnpm-lock.yaml
migrations/: 20240709152246_setup.sql  20250119081541_env.sql  20250122070122_repo_id.sql  20250307231419_delete_deployment.sql
resources/: loading.html  prisma.Dockerfile
src/: alphabet.rs  conf.rs  db.rs  deployment_manager_remove.rs  docker.rs  docker_bridge.rs  env.rs  github.rs  hooks.rs  label.rs  listener.rs  logging.rs  main.rs  openapi.rs  paths.rs  provider.rs  proxy.rs  sqlite_db.rs  time.rs  tokens.rs  traces.rs  utils.rs
src/api/: apps.rs  bearer.rs  deployments.rs  mod.rs  security.rs  server.rs  system.rs  utils.rs
src/api/endpoints/: apps.rs  deployments.rs  mod.rs  system.rs  version.rs
src/container/: commit.rs  mod.rs  prisma.rs  sqld.rs
src/db/: mod.rs  nano_id.rs
src/deployment_hooks/: mod.rs  preview.rs  production.rs
src/deployments/: deployment.rs  label.rs  manager.rs  map.rs  mod.rs  worker.rs
src/deployments/workers/: build.rs  docker.rs  files.rs  github.rs  mod.rs
src/tls/: account.rs  certificate.rs  mod.rs  registration.rs
tests/: api.rs  tls.rs
