[package]
name = "prezel"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
] }
octocrab = "0.38.0"
reqwest = { version = "0.12.5", features = ["json"] }
either = "1.13.0"
bincode = "1.3.3"
secrecy = "0.8.0"
http-body-util = "0.1.2"
tar = "0.4.41"
flate2 = "1.0.30"
chrono = "0.4.38"
anyhow = "1.0.86"
hyper = { version = "1.4.1", features = [
    "full",
] } # should be able to have just "client"
url = "2.5.2"
pingora = { version = "0.3.0", features = ["proxy"] }
async-trait = "0.1.81"
http = "1.1.0"
serde_json = "1.0.120"
futures = "0.3.30"
tokio-util = { version = "0.7.11", features = ["codec"] }
nanoid = "0.4.0"
instant-acme = "0.7.1"
rcgen = "0.13.1"
nixpacks = "1.28.1"
bollard = "0.17.1"
cookie = "0.18.1"
actix-web = "4.9.0"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-rapidoc = { version = "4.0.0", features = ['actix-web'] }
actix-cors = "0.7.0"
env_logger = "0.11.5"
tracing-appender = "0.2.3"
file-rotate = "0.7.6"
rand = "0.8.5"
tempfile = "3.14.0"
tracing-opentelemetry = "0.28.0"
tracing-core = "0.1.28"
openssl = "0.10.64"
opentelemetry = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27.0", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27.0", features = ["metrics"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = [
    "semconv_experimental",
] }
tracing = { version = "0.1.35", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-error = "0.2.0"
# TODO: update this to 0.3.18
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
    "fmt",
    # "json",       # TODO check this
    # "env-filter", # TODO check this
] }
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
ring = "0.17.8"


[dev-dependencies]
regex = "1.10.6"

# [[bin]]
# name = "openapi"
# path = "src/openapi.rs"
